<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insight</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_test">ImageTestActivity</string>
    <string name="title_activity_qrscanner">QRScannerActivity</string>
    <string name="edt_qr_str">QR String here</string>
    <string name="title_activity_splash">splash</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email">Email</string>
    <string name="text_register_msg">Register new user</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_wifi_setup">WifiSetupActivity</string>
    <string name="title_activity_register_insight">RegisterInsightActivity</string>
    <string name="icon">icon</string>
    <string name="title_activity_photo_list">PhotoListActivity</string>
    <string name="title_activity_sound_list">SoundListActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="text_devices">Devices</string>
    <string name="btn_req_video">Request Video</string>

</resources>
