<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:bb="http://schemas.android.com/apk/res-auto"

	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:orientation="vertical"
	android:background="@color/act_background"

	tools:context="com.fmakdemir.insight.RegisterActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/text_register_msg"
		android:id="@+id/textView"
		android:layout_gravity="center"
		/>

	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/edit_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="105dp"
		android:hint="@string/username"
		android:singleLine="true"
		android:inputType="textPersonName"
		/>

	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/edit_email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="-2dp"
		android:hint="@string/email"
		android:singleLine="true"
		android:inputType="textEmailAddress"
		/>

	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/edit_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="-2dp"
        android:hint="@string/password"
        android:singleLine="true"
        android:inputType="textPassword"
		/>

	<com.beardedhen.androidbootstrap.BootstrapButton
		android:id="@+id/btn_register"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/register"
		android:layout_gravity="center"
		bb:bb_type="default"
		/>


</LinearLayout>
