<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
	android:orientation="vertical"
	android:gravity="center"
	android:background="@color/act_background"

    tools:context="com.fmakdemir.insight.SplashActivity">

	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/edit_name"
		android:layout_width="@dimen/input_dim"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:hint="@string/username"
		android:inputType="textPersonName"
		/>

	<com.beardedhen.androidbootstrap.BootstrapEditText
		android:id="@+id/edit_password"
		android:layout_width="@dimen/input_dim"
		android:layout_height="wrap_content"
		android:layout_marginTop="-2dp"
		android:hint="@string/password"
		android:inputType="textPassword"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="5dp"
		android:gravity="center">

		<com.beardedhen.androidbootstrap.BootstrapButton
			android:id="@+id/btn_login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login"
			bootstrapbutton:bb_type="success"
			/>

		<com.beardedhen.androidbootstrap.BootstrapButton
			android:id="@+id/btn_register"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/register"
			bootstrapbutton:bb_type="primary"
			/>

	</LinearLayout>

</LinearLayout>
